--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*Yashvardhan*/
 body{
 	background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(170,252,213,1) 19%, rgba(57,40,52,1) 81%);
